[metadata]
name = pydhcpdparser
version=0.0.1
summary = Pythonic access to DHCPD configuration; syntax parser
description-file =
    README
author = Jay Mehta
author-email = jay87.mehta@gmail.com
url = https://github.com/jay-g-mehta/pydhcpdparser
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[options]
install_requires =
  setuptools
include_package_data = True
packages =
    pydhcpdparser
    pydhcpdparser/test_files




