[metadata]
name = pydhcpdparser
version=0.0.5
summary = Pythonic access to DHCPD configuration; syntax parser
description = DHCP configuration file parser
long_description = file: README.rst
keywords = DHCP DHCPD configuration parser
author = Jay Mehta
author-email = jay87.mehta@gmail.com
url = https://github.com/jay-g-mehta/pydhcpdparser
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[options]
install_requires =
  setuptools >= 30.3.0
include_package_data = True
packages =
    pydhcpdparser
    pydhcpdparser/test_files




